# Qt_OpenCV

./: CMakeLists.txt  g_view.cpp  g_view.h  histogram.cpp  histogram.h  histogram.ui  image.cpp  image.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
